# regul_installator

./: .gitignore  CMakeLists.txt  README.md
src/: InstallerEngine.cpp  InstallerEngine.h  MainWindow.cpp  MainWindow.h  SystemCommand.h  main.cpp  resources.qrc
